implement UniSpeaking full-stack architecture